# trade

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  models.py  worker.py
backend/app/ai/: __init__.py  engine.py  ollama_engine.py  openrouter_engine.py  schema.py  specialist_desk.py
backend/app/api/: auth.py  serializers.py  system.py  trading.py
backend/app/auth/: security.py
backend/app/backtest/: __init__.py  engine.py  walk_forward.py
backend/app/broker/: __init__.py  capital.py  rate_limiter.py  resilient_stream.py  stream.py
backend/app/classifier/: __init__.py  engine.py
backend/app/execution/: __init__.py  base.py  broker.py  factory.py  paper.py
backend/app/indicators/: __init__.py  engine.py
backend/app/market_data/: __init__.py  base.py  factory.py  synthetic.py
backend/app/risk/: __init__.py  correlation.py  drawdown.py  dynamic_sizing.py  engine.py
backend/app/services/: __init__.py  accounts.py  analytics.py  audit.py  emergency.py  engine.py  execution_quality.py  fx.py  live_pricing.py  news_calendar.py  performance.py  (+2 more)
backend/tests/: conftest.py  test_adopt_positions.py  test_classifier_ai.py  test_close_failure.py  test_engine_flow.py  test_fx_multiplier.py  test_indicators.py  test_live_pricing.py  test_manual_trades.py  test_ollama_shadow.py  test_openrouter_consensus.py  test_performance_memory.py  test_phase0.py  test_reconcile.py  test_risk_engine.py  test_slippage_abort.py  test_specialist_desk.py  test_trade_manager.py
(+26 files in other folders)
